manifest/front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  ports:
    - port: 3000
  selector:
    app: front
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  selector:
    matchLabels:
      app: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - image: docker.io/dragontaro/protfolio-front:1.0.0
          name: front
          ports:
            - containerPort: 3000
              name: front
